Bridge Testing added. Small additions to Node Testing.

--- a/STV1/MSunitTests/MSunitTests.csproj
+++ b/STV1/MSunitTests/MSunitTests.csproj
@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MSTest_Bridge.cs" />
     <Compile Include="MSTest_Node.cs" />
     <Compile Include="MSTest_Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
