--- a/STV1/MSunitTests/MSunitTests.csproj
+++ b/STV1/MSunitTests/MSunitTests.csproj
@@ -56,11 +56,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="MSTest_Bridge.cs" />
-    <Compile Include="MSTest_Node.cs" />
     <Compile Include="MSTest_Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MSTest_Predicates.cs" />
+    <Compile Include="MTTest_Node.cs" />
+    <Compile Include="MSTest_Bridge.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\STVRogue\STVRogue.csproj">
