--- a/STV1/MSunitTests/MSunitTests.csproj
+++ b/STV1/MSunitTests/MSunitTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="MSTest_Pack.cs" />
     <Compile Include="MSTest_Items.cs" />
     <Compile Include="MSTest_Dungeon.cs" />
+    <Compile Include="MSTest_Game.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\STVRogue\STVRogue.csproj">
