command tests, pickup method + test

--- a/STV1/MSunitTests/MSunitTests.csproj
+++ b/STV1/MSunitTests/MSunitTests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="MSTest_Items.cs" />
     <Compile Include="MSTest_Dungeon.cs" />
     <Compile Include="MSTest_Game.cs" />
+    <Compile Include="MSTest_Commands.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\STVRogue\STVRogue.csproj">
