--- a/STV1/STVRogue/STVRogue.csproj
+++ b/STV1/STVRogue/STVRogue.csproj
@@ -48,6 +48,7 @@
     <Compile Include="GameLogic\Items.cs" />
     <Compile Include="GameLogic\Pack.cs" />
     <Compile Include="GameLogic\Specification.cs" />
+    <Compile Include="GameLogic\UI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Predicates.cs" />
     <Compile Include="Utils\Utils.cs" />
